# frontend-host

./: Cargo.toml  README.md  justfile
src/: index.html  main.rs
