[package]
name = "spa-host"
version = "0.1.1"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde_json = "1.0.53"
structopt = "0.3.14"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
